# Irregular-Tuning-Maker

./: CMakeLists.txt  LICENSE  README.md  customheaderview.cpp  customheaderview.h  dbManager.cpp  dbManager.h  dbcurrnet.cpp  fractionParser.h  globals.h  interval.cpp  mainwindow.cpp  mainwindow.ui  scale.h  scalespace.cpp  settings.h  toFraction.h  weights.cpp  weights.h
Source/: CMakeLists.txt  app.rc  customheaderview.cpp  customheaderview.h  customspinbox.cpp  customspinbox.h  dbUtils.h  dbcurrnet.h  interval.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scale.cpp  scaleSpace.h  scaleobj.cpp  scalespace.cpp  scalespacedelegate.cpp  scalespacedelegate.h  scalespacemodel.cpp  scalespacemodel.h  settings.h  toFraction.h  utilities.h  weights.cpp
